obj/tp4.output
Rules useless in parser due to conflicts

   39 sentenciaSwitch: /* vacío */

   44 sentenciaReturn: /* vacío */

   62 parametro: TIPO_DATO IDENTIFICADOR


Estado 1 conflictos: 9 desplazamiento/reducción, 1 reducción/reducción
Estado 23 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 30 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 34 conflictos: 8 desplazamiento/reducción, 9 reducción/reducción
Estado 44 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 72 conflictos: 16 reducción(ones)/reducción(ones)
Estado 79 conflictos: 8 desplazamiento/reducción, 11 reducción/reducción
Estado 80 conflictos: 8 desplazamiento/reducción, 11 reducción/reducción
Estado 81 conflictos: 8 desplazamiento/reducción, 11 reducción/reducción
Estado 82 conflictos: 8 desplazamiento/reducción, 11 reducción/reducción
Estado 83 conflictos: 8 desplazamiento/reducción, 11 reducción/reducción
Estado 84 conflictos: 8 desplazamiento/reducción, 11 reducción/reducción
Estado 85 conflictos: 8 desplazamiento/reducción, 11 reducción/reducción
Estado 86 conflictos: 8 desplazamiento/reducción, 11 reducción/reducción
Estado 87 conflictos: 8 desplazamiento/reducción, 11 reducción/reducción
Estado 96 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 143 conflictos: 8 desplazamiento/reducción, 9 reducción/reducción
Estado 144 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 145 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 146 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 147 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 148 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 149 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 150 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 151 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 152 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 153 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 154 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 155 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 177 conflictos: 8 desplazamiento/reducción, 9 reducción/reducción
Estado 182 conflictos: 8 desplazamiento/reducción, 9 reducción/reducción
Estado 198 conflictos: 8 desplazamiento/reducción, 9 reducción/reducción
Estado 199 conflictos: 8 desplazamiento/reducción, 10 reducción/reducción
Estado 205 conflictos: 8 desplazamiento/reducción, 9 reducción/reducción
Estado 206 conflictos: 8 desplazamiento/reducción, 9 reducción/reducción
Estado 217 conflictos: 8 desplazamiento/reducción, 9 reducción/reducción


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: /* vacío */
    4     | listadoDeSentenciasDeDeclaracion saltoOpcional
    5     | definicionFuncion saltoOpcional
    6     | sentenciaSwitch saltoOpcional
    7     | sentenciaWhile saltoOpcional
    8     | sentenciaFor saltoOpcional
    9     | sentenciaDoWhile saltoOpcional
   10     | sentenciaIfElse saltoOpcional
   11     | sentenciaAsignacion saltoOpcional
   12     | incrementoDecremento saltoOpcional
   13     | error saltoOpcional

   14 saltoOpcional: '\n' saltoOpcional
   15              | '\n'

   16 definicionFuncion: TIPO_DATO IDENTIFICADOR '(' listaParametros ')' '{' listadoDeSentencias '}' ';'

   17 listadoDeSentencias: /* vacío */
   18                    | sentenciaSwitch listadoDeSentencias
   19                    | sentenciaDoWhile listadoDeSentencias
   20                    | sentenciaFor listadoDeSentencias
   21                    | sentenciaWhile listadoDeSentencias
   22                    | sentenciaIfElse listadoDeSentencias
   23                    | sentenciaAsignacion listadoDeSentencias
   24                    | sentenciaReturn listadoDeSentencias
   25                    | listadoDeSentenciasDeDeclaracion listadoDeSentencias
   26                    | incrementoDecremento listadoDeSentencias

   27 sentenciaDoWhile: DO '{' listadoDeSentencias '}' WHILE '(' exp ')' ';'

   28 sentenciaFor: FOR '(' sentenciaDecOAsig expC ';' IDENTIFICADOR MAS_MAS ')' '{' listadoDeSentencias '}'
   29             | FOR '(' sentenciaDecOAsig expC ';' IDENTIFICADOR MENOS_MENOS ')' '{' listadoDeSentencias '}'

   30 sentenciaDecOAsig: sentenciaAsignacion
   31                  | sentenciaDeclaracion

   32 incrementoDecremento: IDENTIFICADOR MAS_MAS ';'
   33                     | IDENTIFICADOR MENOS_MENOS ';'

   34 $@1: /* vacío */

   35 sentenciaIfElse: IF '(' exp ')' '{' listadoDeSentencias '}' $@1 sentenciaElse

   36 sentenciaElse: /* vacío */
   37              | ELSE '{' listadoDeSentencias '}'

   38 sentenciaWhile: WHILE '(' exp ')' '\n' '{' listadoDeSentencias '}'

   39 sentenciaSwitch: /* vacío */
   40                | SWITCH '(' exp ')' '{' sentenciaCase '}'

   41 sentenciaCase: /* vacío */
   42              | CASE exp ':' listadoDeSentencias BREAK ';'
   43              | sentenciaCase DEFAULT ':' listadoDeSentencias

   44 sentenciaReturn: /* vacío */
   45                | RETURN exp ';'

   46 listadoDeSentenciasDeDeclaracion: /* vacío */
   47                                 | sentenciaDeclaracion
   48                                 | sentenciaDeclaracion ';' listadoDeSentenciasDeDeclaracion

   49 sentenciaDeclaracion: TIPO_DATO IDENTIFICADOR ';'
   50                     | TIPO_DATO listaIdentificadores
   51                     | TIPO_DATO IDENTIFICADOR '[' expC ']' ';'
   52                     | TIPO_DATO IDENTIFICADOR '[' expC ']' '=' '{' auxi '}' ';'
   53                     | TIPO_DATO '*' IDENTIFICADOR ';'
   54                     | TIPO_DATO IDENTIFICADOR '(' listaParametros ')' ';'

   55 auxi: expC ',' auxi
   56     | expC

   57 sentenciaAsignacion: parametro '=' exp ';'
   58                    | parametro MAS_IGUAL exp ';'
   59                    | parametro MENOS_IGUAL exp ';'
   60                    | parametro POR_IGUAL exp ';'
   61                    | parametro DIVIDIDO_IGUAL exp ';'

   62 parametro: TIPO_DATO IDENTIFICADOR
   63          | IDENTIFICADOR

   64 listaIdentificadores: identificadorA
   65                     | listaIdentificadores ',' identificadorA

   66 identificadorA: IDENTIFICADOR ';'
   67               | IDENTIFICADOR '=' exp ';'
   68               | IDENTIFICADOR MAS_IGUAL exp ';'
   69               | IDENTIFICADOR MENOS_IGUAL exp ';'
   70               | IDENTIFICADOR POR_IGUAL exp ';'
   71               | IDENTIFICADOR DIVIDIDO_IGUAL exp ';'

   72 listaParametros: TIPO_DATO
   73                | TIPO_DATO ',' listaParametros
   74                | TIPO_DATO IDENTIFICADOR
   75                | TIPO_DATO IDENTIFICADOR ',' listaParametros

   76 exp: LITERAL_CADENA
   77    | expC

   78 expC: IDENTIFICADOR
   79     | CHAR
   80     | expC '-' expC
   81     | expC '>' expC
   82     | expC '<' expC
   83     | expC IGUALDAD expC
   84     | expC MAYOR_IGUAL expC
   85     | expC MENOR_IGUAL expC
   86     | expC DESIGUALDAD expC
   87     | expC AND expC
   88     | expC OR expC
   89     | NUM
   90     | NUM_R
   91     | expC '*' expC
   92     | expC '/' expC
   93     | expC '+' expC


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 14 15 38
'(' (40) 16 27 28 29 35 38 40 54
')' (41) 16 27 28 29 35 38 40 54
'*' (42) 53 91
'+' (43) 93
',' (44) 55 65 73 75
'-' (45) 80
'/' (47) 92
':' (58) 42 43
';' (59) 16 27 28 29 32 33 42 45 48 49 51 52 53 54 57 58 59 60 61 66
    67 68 69 70 71
'<' (60) 82
'=' (61) 52 57 67
'>' (62) 81
'[' (91) 51 52
']' (93) 51 52
'{' (123) 16 27 28 29 35 37 38 40 52
'}' (125) 16 27 28 29 35 37 38 40 52
error (256) 13
FOR (258) 28 29
IF (259) 35
ELSE (260) 37
RETURN (261) 45
SWITCH (262) 40
NUM (263) 89
NUM_R (264) 90
IDENTIFICADOR (265) 16 28 29 32 33 49 51 52 53 54 62 63 66 67 68 69
    70 71 74 75 78
TIPO_DATO (266) 16 49 50 51 52 53 54 62 72 73 74 75
DO (267) 27
WHILE (268) 27 38
CHAR (269) 79
LITERAL_CADENA (270) 76
MAYOR_IGUAL (271) 84
MENOR_IGUAL (272) 85
IGUALDAD (273) 83
AND (274) 87
OR (275) 88
DESIGUALDAD (276) 86
CASE (277) 42
BREAK (278) 42
DEFAULT (279) 43
MAS_IGUAL (280) 58 68
MENOS_IGUAL (281) 59 69
POR_IGUAL (282) 60 70
DIVIDIDO_IGUAL (283) 61 71
MAS_MAS (284) 28 32
MENOS_MENOS (285) 29 33


No terminales con las reglas donde aparecen

$accept (48)
    en la izquierda: 0
input (49)
    en la izquierda: 1 2, en la derecha: 0 2
line (50)
    en la izquierda: 3 4 5 6 7 8 9 10 11 12 13, en la derecha: 2
saltoOpcional (51)
    en la izquierda: 14 15, en la derecha: 4 5 6 7 8 9 10 11 12 13
    14
definicionFuncion (52)
    en la izquierda: 16, en la derecha: 5
listadoDeSentencias (53)
    en la izquierda: 17 18 19 20 21 22 23 24 25 26, en la derecha:
    16 18 19 20 21 22 23 24 25 26 27 28 29 35 37 38 42 43
sentenciaDoWhile (54)
    en la izquierda: 27, en la derecha: 9 19
sentenciaFor (55)
    en la izquierda: 28 29, en la derecha: 8 20
sentenciaDecOAsig (56)
    en la izquierda: 30 31, en la derecha: 28 29
incrementoDecremento (57)
    en la izquierda: 32 33, en la derecha: 12 26
sentenciaIfElse (58)
    en la izquierda: 35, en la derecha: 10 22
$@1 (59)
    en la izquierda: 34, en la derecha: 35
sentenciaElse (60)
    en la izquierda: 36 37, en la derecha: 35
sentenciaWhile (61)
    en la izquierda: 38, en la derecha: 7 21
sentenciaSwitch (62)
    en la izquierda: 39 40, en la derecha: 6 18
sentenciaCase (63)
    en la izquierda: 41 42 43, en la derecha: 40 43
sentenciaReturn (64)
    en la izquierda: 44 45, en la derecha: 24
listadoDeSentenciasDeDeclaracion (65)
    en la izquierda: 46 47 48, en la derecha: 4 25 48
sentenciaDeclaracion (66)
    en la izquierda: 49 50 51 52 53 54, en la derecha: 31 47 48
auxi (67)
    en la izquierda: 55 56, en la derecha: 52 55
sentenciaAsignacion (68)
    en la izquierda: 57 58 59 60 61, en la derecha: 11 23 30
parametro (69)
    en la izquierda: 62 63, en la derecha: 57 58 59 60 61
listaIdentificadores (70)
    en la izquierda: 64 65, en la derecha: 50 65
identificadorA (71)
    en la izquierda: 66 67 68 69 70 71, en la derecha: 64 65
listaParametros (72)
    en la izquierda: 72 73 74 75, en la derecha: 16 54 73 75
exp (73)
    en la izquierda: 76 77, en la derecha: 27 35 38 40 42 45 57 58
    59 60 61 67 68 69 70 71
expC (74)
    en la izquierda: 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93,
    en la derecha: 28 29 51 52 55 56 77 80 81 82 83 84 85 86 87 88
    91 92 93


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end           desplazar e ir al estado 2
    error          desplazar e ir al estado 3
    FOR            desplazar e ir al estado 4
    IF             desplazar e ir al estado 5
    SWITCH         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    TIPO_DATO      desplazar e ir al estado 8
    DO             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10

    $end           [reduce usando la regla 3 (line)]
    error          [reduce usando la regla 3 (line)]
    FOR            [reduce usando la regla 3 (line)]
    IF             [reduce usando la regla 3 (line)]
    SWITCH         [reduce usando la regla 3 (line)]
    IDENTIFICADOR  [reduce usando la regla 3 (line)]
    TIPO_DATO      [reduce usando la regla 3 (line)]
    DO             [reduce usando la regla 3 (line)]
    WHILE          [reduce usando la regla 3 (line)]
    '\n'           reduce usando la regla 3 (line)
    '\n'           [reduce usando la regla 39 (sentenciaSwitch)]
    '\n'           [reduce usando la regla 46 (listadoDeSentenciasDeDeclaracion)]

    line                              ir al estado 11
    definicionFuncion                 ir al estado 12
    sentenciaDoWhile                  ir al estado 13
    sentenciaFor                      ir al estado 14
    incrementoDecremento              ir al estado 15
    sentenciaIfElse                   ir al estado 16
    sentenciaWhile                    ir al estado 17
    sentenciaSwitch                   ir al estado 18
    listadoDeSentenciasDeDeclaracion  ir al estado 19
    sentenciaDeclaracion              ir al estado 20
    sentenciaAsignacion               ir al estado 21
    parametro                         ir al estado 22


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

   13 line: error . saltoOpcional

    '\n'  desplazar e ir al estado 23

    saltoOpcional  ir al estado 24


estado 4

   28 sentenciaFor: FOR . '(' sentenciaDecOAsig expC ';' IDENTIFICADOR MAS_MAS ')' '{' listadoDeSentencias '}'
   29             | FOR . '(' sentenciaDecOAsig expC ';' IDENTIFICADOR MENOS_MENOS ')' '{' listadoDeSentencias '}'

    '('  desplazar e ir al estado 25


estado 5

   35 sentenciaIfElse: IF . '(' exp ')' '{' listadoDeSentencias '}' $@1 sentenciaElse

    '('  desplazar e ir al estado 26


estado 6

   40 sentenciaSwitch: SWITCH . '(' exp ')' '{' sentenciaCase '}'

    '('  desplazar e ir al estado 27


estado 7

   32 incrementoDecremento: IDENTIFICADOR . MAS_MAS ';'
   33                     | IDENTIFICADOR . MENOS_MENOS ';'
   63 parametro: IDENTIFICADOR .

    MAS_MAS      desplazar e ir al estado 28
    MENOS_MENOS  desplazar e ir al estado 29

    $default  reduce usando la regla 63 (parametro)


estado 8

   16 definicionFuncion: TIPO_DATO . IDENTIFICADOR '(' listaParametros ')' '{' listadoDeSentencias '}' ';'
   49 sentenciaDeclaracion: TIPO_DATO . IDENTIFICADOR ';'
   50                     | TIPO_DATO . listaIdentificadores
   51                     | TIPO_DATO . IDENTIFICADOR '[' expC ']' ';'
   52                     | TIPO_DATO . IDENTIFICADOR '[' expC ']' '=' '{' auxi '}' ';'
   53                     | TIPO_DATO . '*' IDENTIFICADOR ';'
   54                     | TIPO_DATO . IDENTIFICADOR '(' listaParametros ')' ';'
   62 parametro: TIPO_DATO . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 30
    '*'            desplazar e ir al estado 31

    listaIdentificadores  ir al estado 32
    identificadorA        ir al estado 33


estado 9

   27 sentenciaDoWhile: DO . '{' listadoDeSentencias '}' WHILE '(' exp ')' ';'

    '{'  desplazar e ir al estado 34


estado 10

   38 sentenciaWhile: WHILE . '(' exp ')' '\n' '{' listadoDeSentencias '}'

    '('  desplazar e ir al estado 35


estado 11

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 12

    5 line: definicionFuncion . saltoOpcional

    '\n'  desplazar e ir al estado 23

    saltoOpcional  ir al estado 36


estado 13

    9 line: sentenciaDoWhile . saltoOpcional

    '\n'  desplazar e ir al estado 23

    saltoOpcional  ir al estado 37


estado 14

    8 line: sentenciaFor . saltoOpcional

    '\n'  desplazar e ir al estado 23

    saltoOpcional  ir al estado 38


estado 15

   12 line: incrementoDecremento . saltoOpcional

    '\n'  desplazar e ir al estado 23

    saltoOpcional  ir al estado 39


estado 16

   10 line: sentenciaIfElse . saltoOpcional

    '\n'  desplazar e ir al estado 23

    saltoOpcional  ir al estado 40


estado 17

    7 line: sentenciaWhile . saltoOpcional

    '\n'  desplazar e ir al estado 23

    saltoOpcional  ir al estado 41


estado 18

    6 line: sentenciaSwitch . saltoOpcional

    '\n'  desplazar e ir al estado 23

    saltoOpcional  ir al estado 42


estado 19

    4 line: listadoDeSentenciasDeDeclaracion . saltoOpcional

    '\n'  desplazar e ir al estado 23

    saltoOpcional  ir al estado 43


estado 20

   47 listadoDeSentenciasDeDeclaracion: sentenciaDeclaracion .
   48                                 | sentenciaDeclaracion . ';' listadoDeSentenciasDeDeclaracion

    ';'  desplazar e ir al estado 44

    $default  reduce usando la regla 47 (listadoDeSentenciasDeDeclaracion)


estado 21

   11 line: sentenciaAsignacion . saltoOpcional

    '\n'  desplazar e ir al estado 23

    saltoOpcional  ir al estado 45


estado 22

   57 sentenciaAsignacion: parametro . '=' exp ';'
   58                    | parametro . MAS_IGUAL exp ';'
   59                    | parametro . MENOS_IGUAL exp ';'
   60                    | parametro . POR_IGUAL exp ';'
   61                    | parametro . DIVIDIDO_IGUAL exp ';'

    MAS_IGUAL       desplazar e ir al estado 46
    MENOS_IGUAL     desplazar e ir al estado 47
    POR_IGUAL       desplazar e ir al estado 48
    DIVIDIDO_IGUAL  desplazar e ir al estado 49
    '='             desplazar e ir al estado 50


estado 23

   14 saltoOpcional: '\n' . saltoOpcional
   15              | '\n' .

    '\n'  desplazar e ir al estado 23

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 51


estado 24

   13 line: error saltoOpcional .

    $default  reduce usando la regla 13 (line)


estado 25

   28 sentenciaFor: FOR '(' . sentenciaDecOAsig expC ';' IDENTIFICADOR MAS_MAS ')' '{' listadoDeSentencias '}'
   29             | FOR '(' . sentenciaDecOAsig expC ';' IDENTIFICADOR MENOS_MENOS ')' '{' listadoDeSentencias '}'

    IDENTIFICADOR  desplazar e ir al estado 52
    TIPO_DATO      desplazar e ir al estado 53

    sentenciaDecOAsig     ir al estado 54
    sentenciaDeclaracion  ir al estado 55
    sentenciaAsignacion   ir al estado 56
    parametro             ir al estado 22


estado 26

   35 sentenciaIfElse: IF '(' . exp ')' '{' listadoDeSentencias '}' $@1 sentenciaElse

    NUM             desplazar e ir al estado 57
    NUM_R           desplazar e ir al estado 58
    IDENTIFICADOR   desplazar e ir al estado 59
    CHAR            desplazar e ir al estado 60
    LITERAL_CADENA  desplazar e ir al estado 61

    exp   ir al estado 62
    expC  ir al estado 63


estado 27

   40 sentenciaSwitch: SWITCH '(' . exp ')' '{' sentenciaCase '}'

    NUM             desplazar e ir al estado 57
    NUM_R           desplazar e ir al estado 58
    IDENTIFICADOR   desplazar e ir al estado 59
    CHAR            desplazar e ir al estado 60
    LITERAL_CADENA  desplazar e ir al estado 61

    exp   ir al estado 64
    expC  ir al estado 63


estado 28

   32 incrementoDecremento: IDENTIFICADOR MAS_MAS . ';'

    ';'  desplazar e ir al estado 65


estado 29

   33 incrementoDecremento: IDENTIFICADOR MENOS_MENOS . ';'

    ';'  desplazar e ir al estado 66


estado 30

   16 definicionFuncion: TIPO_DATO IDENTIFICADOR . '(' listaParametros ')' '{' listadoDeSentencias '}' ';'
   49 sentenciaDeclaracion: TIPO_DATO IDENTIFICADOR . ';'
   51                     | TIPO_DATO IDENTIFICADOR . '[' expC ']' ';'
   52                     | TIPO_DATO IDENTIFICADOR . '[' expC ']' '=' '{' auxi '}' ';'
   54                     | TIPO_DATO IDENTIFICADOR . '(' listaParametros ')' ';'
   62 parametro: TIPO_DATO IDENTIFICADOR .
   66 identificadorA: IDENTIFICADOR . ';'
   67               | IDENTIFICADOR . '=' exp ';'
   68               | IDENTIFICADOR . MAS_IGUAL exp ';'
   69               | IDENTIFICADOR . MENOS_IGUAL exp ';'
   70               | IDENTIFICADOR . POR_IGUAL exp ';'
   71               | IDENTIFICADOR . DIVIDIDO_IGUAL exp ';'

    MAS_IGUAL       desplazar e ir al estado 67
    MENOS_IGUAL     desplazar e ir al estado 68
    POR_IGUAL       desplazar e ir al estado 69
    DIVIDIDO_IGUAL  desplazar e ir al estado 70
    '('             desplazar e ir al estado 71
    ';'             desplazar e ir al estado 72
    '['             desplazar e ir al estado 73
    '='             desplazar e ir al estado 74

    MAS_IGUAL       [reduce usando la regla 62 (parametro)]
    MENOS_IGUAL     [reduce usando la regla 62 (parametro)]
    POR_IGUAL       [reduce usando la regla 62 (parametro)]
    DIVIDIDO_IGUAL  [reduce usando la regla 62 (parametro)]
    '='             [reduce usando la regla 62 (parametro)]


estado 31

   53 sentenciaDeclaracion: TIPO_DATO '*' . IDENTIFICADOR ';'

    IDENTIFICADOR  desplazar e ir al estado 75


estado 32

   50 sentenciaDeclaracion: TIPO_DATO listaIdentificadores .
   65 listaIdentificadores: listaIdentificadores . ',' identificadorA

    ','  desplazar e ir al estado 76

    $default  reduce usando la regla 50 (sentenciaDeclaracion)


estado 33

   64 listaIdentificadores: identificadorA .

    $default  reduce usando la regla 64 (listaIdentificadores)


estado 34

   27 sentenciaDoWhile: DO '{' . listadoDeSentencias '}' WHILE '(' exp ')' ';'

    FOR            desplazar e ir al estado 4
    IF             desplazar e ir al estado 5
    RETURN         desplazar e ir al estado 77
    SWITCH         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    TIPO_DATO      desplazar e ir al estado 53
    DO             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
